removed small errors

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -337,7 +337,7 @@ In order to accomplish this, the researchers have attempted to use various smart
 
 The researchers require a method to perform EMA analysis in a manner which even older patients can use, integrated into one package which gathers relevant data about a patient's activities and allows them to easily report what is currently going on and how they feel. They also are looking for a way to access EMA data in various ways. This includes graphical representations of the data which are meaningful to researchers, along with the raw data itself. This data could be activity data, symptoms reporting data, both types of data collated together, and so on. \\
 
-This introductory section of the document is intended to provide a reader with an overview of the purpose, overall scope, and organization of the document. As well as a description of characteristics of both the intended user of this system, and the characteristics of the intended reader of this document.\\
+This introductory section of the document is intended to provide a reader with an overview of the purpose, overall scope, and organization of the document. As well as the characteristics of the intended reader of this document.\\
 
 \subsection{Purpose of Document}
 
