--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -337,7 +337,7 @@ In order to accomplish this, the researchers have attempted to use various smart
 
 The researchers require a method to perform EMA analysis in a manner which even older patients can use, integrated into one package which gathers relevant data about a patient's activities and allows them to easily report what is currently going on and how they feel. They also are looking for a way to access EMA data in various ways. This includes graphical representations of the data which are meaningful to researchers, along with the raw data itself. This data could be activity data, symptoms reporting data, both types of data collated together, and so on. \\
 
-This introductory section of the document is intended to provide a reader with an overview of the purpose, overall scope, and organization of the document. As well as the characteristics of the intended reader of this document.\\
+This introductory section of the document is intended to provide a reader with an overview of the purpose, overall scope, and organization of the document. As well as a description of the characteristics of the intended reader of this document.\\
 
 \subsection{Purpose of Document}
 
@@ -363,6 +363,10 @@ Additional purposes of this document are to plan for the design stage of the pro
   describes, all of the assumptions.}
 
 \subsection{Characteristics of Intended Reader} \label{sec_IntendedReader}
+
+While this document is intended to describe the requirements of the system in as abstract of a method as possible, it is unreasonable to expect a layman without any knowledge within the field of mechatronics to understand the contents of this document. Therefore, there are certain characteristics that a reader must have in order to fully grasp the scope of this SRS.
+
+In addition, a reader should have a user-level understand of Ecological Momentary Assessment
 
 \plt{This section summarizes the skills and knowledge of the readers of the
   SRS.  It does NOT have the same purpose as the ``User Characteristics''
