Added section 2.2, specified section 2.4 to be left until after section 2.5.

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -347,43 +347,18 @@ Additional purposes of this document are to plan for the design stage of the pro
 
 \subsection{Scope of Requirements} 
 
-\plt{Modelling the real world requires simplification.  The full complexity of
-  the actual physics, chemistry, biology is too much for existing models, and
-  for existing computational solution techniques.  Rather than say what is in
-  the scope, it is usually easier to say what is not.  You can think of it as
-  the scope is initially everything, and then it is constrained to create the
-  actual scope.  For instance, the problem can be restricted to 2 dimensions, or
-  it can ignore the effect of temperature (or pressure) on the material
-  properties, etc.}  
-
-\plt{The scope section is related to the assumptions section
-  (Section~\ref{sec_assumpt}).  However, the scope and the assumptions are not
-  at the same level of abstraction.  The scope is at a high level.  The focus is
-  on the ``big picture'' assumptions.  The assumptions section lists, and
-  describes, all of the assumptions.}
+The scope requirements for a system which satisfies the goals of EMA must be defined properly. In the case of this project, the requirements must include a method of activity monitoring and a way to prompt users with questions relevant to EMA. In addition, this system will be used by older adults in Canada, specifically in a typical Canadian household environment. These adults will have a fixed daily routine. This system is not intended to be used by bedridden or sedentary users. If a user is unable to maintain a certain level of movement on a regular basis, the entire point of EMA is rendered moot. It is also necessary to exclude children from the sphere of users. This system must be designed for adults, aimed specifically towards older adults.\\
 
 \subsection{Characteristics of Intended Reader} \label{sec_IntendedReader}
 
-While this document is intended to describe the requirements of the system in as abstract of a method as possible, it is unreasonable to expect a layman without any knowledge within the field of mechatronics to understand the contents of this document. Therefore, there are certain characteristics that a reader must have in order to fully grasp the scope of this SRS.
+While this document is intended to describe the requirements of the system in as abstract of a method as possible, it is unreasonable to expect a layman without any knowledge within the field of mechatronics to understand the contents of this document. Therefore, there are certain characteristics that a reader must have in order to fully grasp the scope of this SRS. \\
 
-In addition, a reader should have a user-level understand of Ecological Momentary Assessment
+A reader should have a grasp of software development, electronics, mechanics and dynamics at a level equivalent to a 3rd-Year Mechatronics Undergraduate University student, as well as a basic understanding of human anatomy of which a high school level is adequate. \\
 
-\plt{This section summarizes the skills and knowledge of the readers of the
-  SRS.  It does NOT have the same purpose as the ``User Characteristics''
-  section (Section~\ref{SecUserCharacteristics}).  The intended readers are the
-  people that will read, review and maintain the SRS.  They are the people that
-  will conceivably design the software that is intended to meet the
-  requirements.  The user, on the other hand, is the person that uses the
-  software that is built.  They may never read this SRS document.  Of course,
-  the same person could be a ``user'' and an ``intended reader.''}
-
-\plt{The intended reader characteristics should be written as unambiguously and
-  as specifically as possible.  Rather than say, the user should have an
-  understanding of physics, say what kind of physics and at what level.  For
-  instance, is high school physics adequate, or should the reader have had a
-  graduate course on advanced quantum mechanics?}
+In addition, a reader should have a high-level understanding of Ecological Momentary Assessment. This does not have to be particularly in depth, but a reader should be able to identify the main objectives, practices, and difficulties of performing EMA. Introductory resources related to this can be found here [specify where]. \\
 
 \subsection{Organization of Document}
+I'm leaving this section until we finalize section 5 and beyond. It won't take long. -JH\\
 
 \plt{This section provides a roadmap of the SRS document.  It will help the
   reader orient themselves.  It will provide direction that will help them
