typo corrections and minor additions

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -341,13 +341,13 @@ This introductory section of the document is intended to provide a reader with a
 
 \subsection{Purpose of Document}
 
-This document is intended to describe and the requirements of Team \#1's system in a structured and collected manner. In other words, this is a document focused on what the system needs to do and the metrics and methods used to measure its performance. This groundwork is laid in a way to allow every individual who reads this document to understand the details essential to the requirements of this system.\\
+This document is intended to describe the requirements of Team \#1's system in a structured and collected manner. In other words, this is a document focused on what the system needs to do and the metrics and methods used to measure its performance. This groundwork is laid in a way to allow every individual who reads this document to understand the details essential to the requirements of this system.\\
 
 Additional purposes of this document are to plan for the design stage of the project, foster effective communication between members of the team, and to establish reference material to which team members will be able to refer back to at later stages in the project should they need to acquire a higher-level view of the system.
 
 \subsection{Scope of Requirements} 
 
-The scope requirements for a system which satisfies the goals of EMA must be defined properly. In the case of this project, the requirements must include a method of activity monitoring and a way to prompt users with questions relevant to EMA. In addition, this system will be used by older adults in Canada, specifically in a typical Canadian household environment. These adults will have a fixed daily routine. This system is not intended to be used by bedridden or sedentary users. If a user is unable to maintain a certain level of movement on a regular basis, the entire point of EMA is rendered moot. It is also necessary to exclude children from the sphere of users. This system must be designed for adults, aimed specifically towards older adults.\\
+The scope requirements for a system which satisfies the goals of EMA must be defined properly. In the case of this project, the requirements must include a method of activity monitoring and a way to prompt users with questions relevant to EMA. In addition, this system will be used by older adults in Canada, specifically in a typical Canadian household environment, likely with a fixed daily routine. This system is not intended to be used by bedridden or sedentary users. If a user is unable to maintain a certain level of movement on a regular basis, the entire point of EMA is rendered moot. It is also necessary to exclude children from the sphere of users. This system must be designed for adults, aimed specifically towards older adults.\\
 
 \subsection{Characteristics of Intended Reader} \label{sec_IntendedReader}
 
